# rsword

./: Cargo.toml  readme.txt
assets/: Words.en.txt
src/: game.rs  main.rs  word_table.rs  word_tree.rs
src/game/: game_ui.rs  setup.rs
