[package]
name = "rswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_eventlistener = "0.5.0"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git", rev = "b7d71343ebe09cbb9653eb31db4ddf6ad6950f3a" }
bevy_pancam = "0.9.0"
glam = "0.24.2"
