[package]
name = "rswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_eventlistener = "0.5.0"
bevy_mod_picking = { git = "https://github.com/aevyrie/bevy_mod_picking.git", rev = "254c9e1bbadb22bfcda669e0a0fa815bedff25b4" }
bevy_pancam = "0.9.0"
glam = "0.24.2"

[patch.crates-io]
bevy_pancam = { path = "../bevy_pancam" }
