[package]
name = "rswords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_eventlistener = "0.6"
bevy_eventlistener_core = "0.6"
bevy_mod_picking = "0.17"
bevy_pancam = "0.10"
glam = "0.24"
tracing-subscriber = "0.3.17"
bevy-inspector-egui = "*"
bevy_easings = "*"

[patch.crates-io]
bevy_pancam = { path = "../bevy_pancam" }
bevy_mod_picking = { path = "../bevy_mod_picking" }
